# new_admin_panel_sprint_3

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
postgres_to_es/: Dockerfile  README.md  backoff.py  constants.py  elastic_loader.py  elastic_schema.py  extract.py  log.py  main.py  models.py  state.py
postgres_to_es/tests/: __init__.py  test_extractor.py
