[tool.poetry]
name = "new-admin-panel-sprint-3"
version = "0.1.0"
description = ""
authors = ["Dmitriy Pereguda <dmitry.pereguda@sofoil.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
redis = "^4.5.5"
psycopg2 = "^2.9.6"
pydantic = "^1.10.9"
loguru = "^0.7.0"
elasticsearch = "^8.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
oitnb = "^0.2.2"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
